# CoCoSpec

./: .gitignore  Analysis_white.py  Load_Toucan_tiff.py  Main.py  Organization_Cocoa_Paper_Planning.xlsx  PCA.py  Physicochemical.csv  README.md  Utils.py  pyproject.toml  requirements.txt  run_cocospec.bat  run_cocospec.sh
Resources/Metadata/: Metadata_EOS_M50.hdr  Metadata_Toucan.hdr
resources/: Physicochemical.csv
resources/Metadata/: Metadata_Specim_IQ.hdr  Metadata_Ultris_SR5.hdr
resources/wavelengths/: eos_m50.csv  specim_iq.csv  toucan.csv  ultris_sr5.csv
src/: Main.py  check_specim_files.py  main_load_acquisition_info.py  main_load_paths.py  main_spectrum_correction.py  schemas.py  utils.py
src/const/: enums.py  hyperspectral_image.py  mappers.py  paths.py
src/demosaicking/: utils.py
src/loading/: loading.py
src/main/: demosaic_toucan.py  load_annotations.py  load_toucan_tiff.py
src/schemas/: acquisitions.py  cameras.py  pixel_managers.py
src/utils/: PCA.py  arrays.py  pca_sampling.py  processing.py  spectra.py
utils/: PCA.py  Utils.py  Utils_pca.py  annotations.py  pca_sampling.py  processing.py  spectral_signatures.py  ultris.py  yolo_utils.py
